# template-rust

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  docs.yml  release-trigger.yml
wix/: main.wxs
