[package]
name = "template_rust"
version = "0.1.0"
description = "A template for creating Rust applications."
edition = "2024"
repository = "https://github.com/javidahmed64592/template-rust"
license = "MIT"
authors = ["Javid Ahmed <javidahmed@icloud.com>"]

[dependencies]

[profile.dist]
inherits = "release"
lto = "thin"
